Updated API and board designs

--- a/API/views/index.erb
+++ b/API/views/index.erb
@@ -2,10 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Mobifreaks Classic - Iphone | Android | High End Touch</title>
+<title>PiSofa</title>
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
-<meta http-equiv="keywords" content="free mobile website templates, free mobile website template, free iphone template, free android template, free high end touch mobile templates" />
-<meta http-equiv="description" content="Get free mobile templates for Iphone , Android and High end touch mobile devices" />
 <link href="css/style.css"rel="stylesheet" type="text/css" />
 <script src="jquery-2.0.3.js"></script>
 <script src="index-page.js"></script>
