--- a/Android/PiSofaApp/PiSofa/src/main/res/values-v21/styles.xml
+++ b/Android/PiSofaApp/PiSofa/src/main/res/values-v21/styles.xml
@@ -8,7 +8,7 @@
         <item name="android:layout_margin">3dp</item>
         <item name="android:textSize">30sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:background">@drawable/normal_button</item>
+        <item name="android:background">@drawable/ripple_button</item>
     </style>
 
     <style name="SpinnerTextViewItem" parent="@android:style/Widget">
